// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns contact for aceventura 1`] = `
Object {
  "emails": Array [
    Object {
      "id": 1,
      "tags": Array [
        2,
      ],
      "value": "e",
    },
  ],
  "id": 13,
  "list_id": 14,
  "tags": Array [],
  "vcard": Object {
    "events": Array [
      Object {
        "day": 1,
        "month": 10,
        "type": Array [
          "birthday",
          "wtf",
        ],
      },
      Object {
        "type": Array [
          "unknown",
        ],
      },
    ],
    "names": Array [
      Object {},
    ],
  },
}
`;

exports[`returns contact for collie (no email tags) 1`] = `
Object {
  "emails": Array [
    Object {
      "id": 1,
      "tags": Array [],
      "value": "e",
    },
  ],
  "id": 13,
  "list_id": 14,
  "tags": Array [],
  "vcard": Object {
    "names": Array [],
  },
}
`;

exports[`returns contact for collie (shared contact) 1`] = `
Object {
  "emails": Array [],
  "id": 13,
  "list_id": 14,
  "tags": Array [],
  "vcard": Object {
    "names": Array [],
  },
}
`;

exports[`returns contact for collie 1`] = `
Object {
  "emails": Array [
    Object {
      "id": 1,
      "tags": Array [
        2,
      ],
      "value": "e",
    },
  ],
  "id": 13,
  "list_id": 14,
  "tags": Array [
    1,
    2,
  ],
  "vcard": Object {
    "events": Array [
      Object {
        "day": 1,
        "month": 10,
        "type": Array [
          "birthday",
          "wtf",
        ],
        "year": 2010,
      },
      Object {
        "type": Array [
          "unknown",
        ],
      },
    ],
    "names": Array [
      Object {
        "last": "n",
      },
    ],
    "telephone_numbers": Array [
      Object {
        "telephone_number": "+0",
      },
    ],
  },
}
`;
